[gd_scene load_steps=7 format=1]

[ext_resource path="res://screens/abstract_screen.tscn" type="PackedScene" id=1]
[ext_resource path="res://screens/harvest/harvest_theme.tres" type="Theme" id=2]
[ext_resource path="res://screens/harvest/harvest_screen.gd" type="Script" id=3]
[ext_resource path="res://levels/harvest/tileset.tres" type="TileSet" id=4]
[ext_resource path="res://screens/harvest/props.png" type="Texture" id=5]

[sub_resource type="GDScript" id=1]

resource/name = "field_tiles"
script/source = "extends TileMap

var already_pressed = false
var decrease = preload(\"res://screens/harvest/decrease_money.tscn\")
signal tiles_changed(tilemap)
signal change_tile(tile)

func _ready():
	set_process(true)
	
func _process(delta):
	var cell = world_to_map(get_local_mouse_pos())
	if cell.x <= 10 and cell.x >= 0 and cell.y <= 6 and cell.y >= 0:
		if Input.is_mouse_button_pressed(1):
			if (get_cell(cell.x, cell.y)) == 0 and (player.money - (player.tile_price/2)) >= 0:
				set_cell(cell.x, cell.y, 1)
				player.set_money(player.tile_price/2, player.BUY)
				player.total_tiles = get_used_cells_by_id(1).size() * player.tile_price
				emit_signal(\"tiles_changed\", self)
				var vfx = decrease.instance()
				vfx.type = 0
				vfx.set_pos(map_to_world(cell))
				add_child(vfx)

		elif Input.is_mouse_button_pressed(2):
			if (get_cell(cell.x, cell.y)) == 1:
				set_cell(cell.x, cell.y, 0)
				player.set_money(player.tile_price/4, player.SELL)
				player.total_tiles = get_used_cells_by_id(1).size() * player.tile_price
				emit_signal(\"tiles_changed\", self)
				var vfx = decrease.instance()
				vfx.type = 1
				vfx.set_pos(map_to_world(cell))
				add_child(vfx)"

[node name="HarvestScreen" instance=ExtResource( 1 )]

theme/theme = ExtResource( 2 )
script/script = ExtResource( 3 )
next_scene = "res://screens/receipt/receipt_screen.tscn"

[node name="Harvest" type="Node2D" parent="."]

[node name="Field" type="Node2D" parent="Harvest"]

transform/pos = Vector2( 176.347, 141.488 )

[node name="Tiles" type="TileMap" parent="Harvest/Field"]

mode = 0
tile_set = ExtResource( 4 )
cell/size = Vector2( 64, 64 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 0, 0, 1, 0, 2, 0, 3, 0, 4, 0, 5, 0, 6, 0, 7, 0, 8, 0, 9, 0, 10, 0, 65536, 0, 65537, 0, 65538, 0, 65539, 0, 65540, 0, 65541, 0, 65542, 0, 65543, 0, 65544, 0, 65545, 0, 65546, 0, 131072, 0, 131073, 0, 131074, 0, 131075, 0, 131076, 0, 131077, 0, 131078, 0, 131079, 0, 131080, 0, 131081, 0, 131082, 0, 196608, 0, 196609, 0, 196610, 0, 196611, 0, 196612, 0, 196613, 0, 196614, 0, 196615, 0, 196616, 0, 196617, 0, 196618, 0, 262144, 0, 262145, 0, 262146, 0, 262147, 0, 262148, 0, 262149, 0, 262150, 0, 262151, 0, 262152, 0, 262153, 0, 262154, 0, 327680, 0, 327681, 0, 327682, 0, 327683, 0, 327684, 0, 327685, 0, 327686, 0, 327687, 0, 327688, 0, 327689, 0, 327690, 0, 393216, 0, 393217, 0, 393218, 0, 393219, 0, 393220, 0, 393221, 0, 393222, 0, 393223, 0, 393224, 0, 393225, 0, 393226, 0 )
script/script = SubResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 380.0
margin/top = 71.0
margin/right = 685.0
margin/bottom = 87.0
range/min = 0.0
range/max = 100.0
range/step = 1.0
range/page = 0.0
range/value = 1.0
range/exp_edit = false
range/rounded = false
percent/visible = false

[node name="Time" type="Label" parent="ProgressBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 6.0
margin/top = -27.0
margin/right = 303.0
margin/bottom = -2.0
custom_colors/font_color = Color( 0.8, 0.572549, 0.415686, 1 )
text = "Harvesting for: {time}/30 days"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Amount" type="Label" parent="ProgressBar"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = -3.0
margin/right = 305.0
margin/bottom = 25.0
custom_colors/font_color = Color( 0.976471, 0.627451, 0.368627, 1 )
text = "{current}/{total}"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 452.0
margin/top = 94.0
margin/right = 614.0
margin/bottom = 124.0
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Start Harvest"
flat = false

[node name="Background" type="CanvasLayer" parent="."]

layer = -6
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="ColorFrame" type="ColorFrame" parent="Background"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 0.352941, 0.309804, 0.32549, 1 )

[node name="Prop" type="Sprite" parent="Background"]

transform/pos = Vector2( 45.4025, 423.155 )
transform/rot = 2.08249
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )

[node name="Prop2 2" type="Sprite" parent="Background"]

transform/pos = Vector2( 930.599, 246.116 )
transform/rot = 2.08249
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )

[node name="Prop1" type="Sprite" parent="Background"]

transform/pos = Vector2( 77.5891, 442.662 )
transform/rot = -3.96393
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )

[node name="Prop2" type="Sprite" parent="Background"]

transform/pos = Vector2( 962.785, 265.623 )
transform/rot = -3.96393
transform/scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 5 )

[node name="Help" type="CanvasLayer" parent="."]

layer = 8
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Control" type="Control" parent="Help"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 2 )
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0

[node name="ColorFrame" type="ColorFrame" parent="Help/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1024.0
margin/bottom = 600.0
color = Color( 0.199219, 0.199219, 0.199219, 0.726745 )

[node name="Panel" type="Panel" parent="Help/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 306.0
margin/top = 68.0
margin/right = 711.0
margin/bottom = 534.0

[node name="Label" type="Label" parent="Help/Control"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 346.0
margin/top = 95.0
margin/right = 672.0
margin/bottom = 425.0
custom_colors/font_color = Color( 0.996078, 0.819608, 0.486275, 1 )
text = "welcome to your farming field!!

now is time to accomplish your contract demands.

you can tillage as many field as needed in order to produce the amount needed to fulfill the demands.

left click to tillage and prepare the tiles for harvest.

right click to turn them back to common grass and decrease your field production.

be aware of supply - demand."
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Button" type="Button" parent="Help/Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 588.0
margin/top = 483.0
margin/right = 692.0
margin/bottom = 521.0
toggle_mode = false
click_on_press = true
enabled_focus_mode = 2
shortcut = null
text = "got it"
flat = false

[connection signal="change_tile" from="Harvest/Field/Tiles" to="." method="_on_change_tile"]

[connection signal="tiles_changed" from="Harvest/Field/Tiles" to="." method="_on_tiles_changed"]

[connection signal="toggled" from="Button" to="." method="_on_harvest_toggled"]

[connection signal="released" from="Help/Control/Button" to="Help" method="queue_free"]


